   Also a new argument `nct` allows to fix this threshold to a user selected value instead of deriving it based on the median of the observed change magnitudes. 
* `unsuperClass` has a new argument `output` which allows to return the distances to all cluster centers as raster layers, instead of the class itself 

Fixes:
* `rasterCVA` estimates median values now for entire rasters and not per chunk
* `topCor` now works for tiny rasters as well (fixes #55, reported by @latenooker) 


RStoolbox 0.2.6
====================================
New:
* added several Sentinel-2 optimized spectral indices relying on red-edge bands: 
   - red-edge inflection point (REIP),
   - normalized difference red-edge indices (NDREI1, NDREI2),
   - green-band chlorophyll index (CLG), red-edge chlorophyll index (CLRE)
   - Modified Chlorophyll Absorption Ratio Index (MCARI) 
   - MERIS Terrestrial Chlorophyll Index (MTCI)

Fixes: 
* `readSLI` and `writeSLI` now handle endian of binary spectral libraries correctly (#47, fix contributed by @aloboa)
* fix calculation of prediction probabilities in `superClass`(reported by Benson Kemboi)
* adapt to raster 2.9.5 API changes
* fix order of thermal calibration coefficients for Landsat 8 L1 MTL metadata in `readMeta` (reported by Xiaoma Li)
* fixed an issue where `readSLI` did not find header files with dots in pathnames (#51, reported by @aloboa)

Changes:
* modified readSLI label parsing. Internal white space is now converted to underscores (#52)


RStoolbox 0.2.4
====================================
New:

* function `oneHotEncode`: splits a single rasterLayer into multiple layers (one per class)
  with one-hot encoding, i.e. pixel value = 1 for matches, pixel value = 0 for all other classes (background).
* `ggR()` can now display more than one layer. Each layer can be plotted to a subplot in a multi-panel figure.